UPDATE: Atualize modulo template - Retira chave definition do DTO, entity e migration - Deleta CreateVersionDto - Altera request e openapi com essas atualizações
