# src/modules/templates/dto/create-version.dto.ts
@@ -1,6 +1,0 @@
-import { IsObject } from 'class-validator';
-
-export class CreateVersionDto {
-  @IsObject()
-  definition: Record<string, any>;
-}
